IDE: ErrorsPage: fix a couple of IE related bugs - the projpage test for correct file types, the apperance of a blank error listing, including a tweak to the debug output therein - and some whitespace changes and redundancy removal of the errorspage css

--- a/Robo-IDE/trunk/roboide/static/css/errors.css
+++ b/Robo-IDE/trunk/roboide/static/css/errors.css
@@ -27,14 +27,9 @@
 #errors-listing dd {
 }
 
-#errors-listing ul {
-	padding: 0;
-}
-
 #errors-listing dl {
 	margin: 0;
 }
-
 #errors-listing dl dt {
 	float: left;
 	margin: 0;
@@ -45,7 +40,6 @@
 	padding-right: 8px;
 	clear: both;
 }
-
 #errors-listing dl dd {
 	margin-left: 43px;
 }
